added index to stages

--- a/static/index.html
+++ b/static/index.html
@@ -8,10 +8,12 @@
     <link href="css/basic.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
-    <h1>Services available</h1>
+    <h1>Stages of converting http://logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15 into RDF with csv2rdf4lod</h1>
 	<ul>
-        <li><a href='classes'>List of classes in the triple store</a></li>
-        <li><a href='namedGraphs'>Named graphs in the triple store</a></li>
+        <li><a href='retrieval/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of retrieval</a></li>
+        <li><a href='preparations/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of preparations</a></li>
+        <li><a href='conversion/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of conversion</a></li>
+        <li><a href='publishings/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of publishings</a></li>
     </ul>
   </body>
 </html>
