renaming retrievals pointers

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Stages of converting http://logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15 into RDF with csv2rdf4lod</h1>
 	<ul>
-        <li><a href='retrieval/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of retrieval</a></li>
+        <li><a href='retrievals/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of retrieval</a></li>
         <li><a href='preparations/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of preparations</a></li>
         <li><a href='conversion/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of conversion</a></li>
         <li><a href='publishings/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of publishings</a></li>
